syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.userservice.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);

  // Ticket-related methods
  rpc CreateTicket (CreateTicketRequest) returns (TicketResponse);
  rpc ListTickets (ListTicketsRequest) returns (ListTicketsResponse);
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  repeated Ticket tickets = 4;
}

message Ticket {
  string ticket_id = 1;
  int64 user_id = 2;
  string movie_name = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message UserResponse {
  User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

// Ticket-related messages
message CreateTicketRequest {
  int64 user_id = 1;
  string movie_name = 2;
}

message TicketResponse {
  Ticket ticket = 1;
}

message ListTicketsRequest {
  int64 user_id = 1;
}

message ListTicketsResponse {
  repeated Ticket tickets = 1;
}
